--- a/templates/custom.html
+++ b/templates/custom.html
@@ -100,10 +100,13 @@
                 {% if user.is_authenticated %}
                 <li>
                   <a class="ProfileLinkHeader">
-                    <img
-                      class="UserProfileImages"
-                      src="{{user.profile.image.url}}"
-                    />
+                    {% if user.profile.image %}
+										<img class="UserProfileImages" src="{{ user.profile.image.url }}">
+										{% else %}
+										<!--user icon-->
+										<i class="lni lni-user" style="color:rgb(182 144 76)"></i>
+
+											{% endif %}	
                     {% comment %} first name for user {% endcomment %}
                     {{user.first_name }} {{user.last_name }}
                   </a>
@@ -112,8 +115,8 @@
                       <a href="{% url 'accounts:profile' %}">My Profile</a>
                     </li>
                     <li><a href="{% url 'accounts:logout' %}">Log Out</a></li>
-                    {% if user.is_superuser %}
-                    <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                    {% if user.is_superuser or user.is_staff %}
+                    <li><a href="{% url 'admin:index' %}">Dashboard</a></li>
                     {% endif %}
                   </ul>
                 </li>
@@ -732,6 +735,9 @@
                                   </div>
                                 </div>
                               </div>
+
+
+                              <input id="product_height" value="{{products.0.height}}" style="display:none">
 
                               <div class="accordion-item">
                                 <h2
@@ -1693,16 +1699,7 @@
                             <h2 class="">Pricing</h2>
                           </div>
                           <div class="AddTextBodyTap AddDesignBodyTap">
-                            <div class="row">
-                              <div class="col-8">
-                                <h3>product price</h3>
-                              </div>
-                              <div class="col-4">
-                                <p class="lead" id="product_price">
-                                  {{products.0.price}}
-                                </p>
-                              </div>
-                            </div>
+                            
                             <div class="row">
                               <div class="col-8">
                                 <h3>front design Height</h3>
@@ -2848,30 +2845,37 @@
 
               document.getElementById("teamtableprice").innerHTML=teamtable.innerHTML;
           }else{
-              console.log("teamtableItems has no childNodes");
               // get teamtableprice parent div
               document.getElementById("teamtableprice").parentNode.style.display = "none";
           }
 
 
+          // get SizeItem by classname []
+          var SizeItems = document.getElementsByClassName("SizeItem");
 
-          {% for size in products.0.sizes.all %}
-          // get value in size_{{size.id}}
-          var size_{{size.id}} = document.getElementById("size_{{size.id}}").value;
-          size_simbol= "{{size.simbol}}";
-          // get product_sizes_price by id
-          product_sizes_price.innerHTML +=`
-          <div class="col-8" >
-              <h3>${size_simbol}</h3>
-              </div>
-              <div class="col-4">
-                  <p class="lead" id="back_design_price">
-                      ${size_{{size.id}}}
-                  </p>
-              </div>
-          `;
-          {% endfor %}
+          // loop through SizeItem and get p , input value
+          for (var i = 0; i < SizeItems.length; i++){
+            var sizeItem = SizeItems[i];
 
+            // get p element
+            var sizeSymbol = sizeItem.getElementsByTagName("p")[0].innerHTML;
+
+            // get input element
+            var inputElement = sizeItem.getElementsByTagName("input")[0];
+
+             // Get the value from the input element
+             var inputValue = inputElement.value;
+             product_sizes_price.innerHTML +=`
+             <div class="col-8" >
+                 <h3>${sizeSymbol}</h3>
+                 </div>
+                 <div class="col-4">
+                     <p class="lead" id="back_design_price">
+                         ${inputValue} 
+                     </p>
+                 </div>
+             `;
+          }
       });
 
 
@@ -2988,17 +2992,21 @@
             var product_description = document.getElementById(
               "product_description"
             );
-            var product_price = document.getElementById("product_price");
+
 
             // clear the MatrialSelect , PercentSelect
             MatrialSelect.innerHTML = "";
             PercentSelect.innerHTML = "";
-            product_price.innerHTML = "";
             product_description.innerHTML = "";
             // related products
             var related_products = document.getElementById("related_products");
+            var product_height = document.getElementById("product_height");
+            var product_height_data="";
+            product_height_data = data.product.height;
+            product_height.value = product_height_data;
             related_products.innerHTML = "";
             single_related_product = "";
+
 
             product_sizes.innerHTML = "";
             product_colors.innerHTML = "";
@@ -3033,7 +3041,7 @@
                                 <div class="SizeItem">
                                     <p>${size.fields.simbol}</p>
                                     <input name="size_${size.fields.simbol}"
-                                        value="${size.fields.simbol}"
+                                        value="0"
                                         type="number"
                                         class="InputNumber">
                                 </div>
@@ -3059,8 +3067,7 @@
             }
             descriptionData = data.product.description;
             product_description.innerHTML = descriptionData;
-            priceData = data.product.price;
-            product_price.innerHTML = priceData;
+            
 
             // loop on related product and display it
             for (const r_product of related_products_data) {
