--- a/templates/custom.html
+++ b/templates/custom.html
@@ -91,7 +91,7 @@
                   >
                 </li>
                 <li>
-                  <a href="{% url 'call_expert:call_expert' %}">Call expert</a>
+                  <a href="{% url 'call_expert:call_expert' %}">Call Designer</a>
                 </li>
                 <li><a href="{% url 'product:ordaring' %}">Ordaring</a></li>
               </ul>
