--- a/templates/card.html
+++ b/templates/card.html
@@ -66,7 +66,7 @@
 							     <li><a href="{% url 'home:home' %}">Home</a></li>
 								<li><a href="custom.html">self customization</a></li>
 								<li><a href="PosterAndBanners.html">posters and banners</a></li>
-								<li><a href="CallExpert.html">Call expert</a></li>
+								<li><a href="CallExpert.html">Call Designer</a></li>
 								<li><a href="Ordaring.html">Ordaring</a></li>								
 							</ul>
 							
