update backimage in custom page

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -233,7 +233,7 @@
                           <img
                             class="ImageTeshert"
                             id="tshirt-backgroundpicture-back"
-                            src="{% static 'assets/img/newImages/products/2_back.png' %}"
+                            src="{{products.0.backimage.url}}"
                           />
                           <div id="drawingArea" class="drawing-area">
                             <div class="canvas-container">
