--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -5300,8 +5300,8 @@ text {
     justify-content: space-between;
     height: 40px;
     padding: 0 15px;
-    border: 1px solid #eee;
-    background: #fff;
+    border: 1px solid #dbb86c;
+    background: #dbb86c;
     padding-right: 0
 }
 .FontTapUpper .arowdowen{
