--- a/templates/custom.html
+++ b/templates/custom.html
@@ -82,18 +82,18 @@
                 <li><a href="{% url 'home:home' %}">Home</a></li>
                 <li>
                   <a href="{% url 'product:self_customization' %}"
-                    >self customization</a
+                    >Customization</a
                   >
                 </li>
                 <li>
                   <a href="{% url 'banner_and_posters:banner_and_posters' %}"
-                    >Signs and Postars</a
+                    >Signs and posters</a
                   >
                 </li>
                 <li>
-                  <a href="{% url 'call_expert:call_expert' %}">Call Designer</a>
+                  <a href="{% url 'call_expert:call_expert' %}">Call A Designer</a>
                 </li>
-                <li><a href="{% url 'product:ordaring' %}">Ordaring</a></li>
+                <li><a href="{% url 'product:ordaring' %}">Ordring</a></li>
               </ul>
 
               <ul class="nav-menu nav-menu-social align-to-right">
