--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -103,14 +103,12 @@ color: #000;
 												{% endfor %}
 											
 											{% endif %}
-												<form method="post">
+												<form method="post" enctype="multipart/form-data">
 													{% csrf_token %}
 
 													<input type="text" name="fromtime" id="fromtime" class="d-none">
 													<input type="text" name="totime" id="totime" class="d-none">
 													<input type="text" name="data" id="data" class="d-none">
-
-
 	
 													<div class="row">
 														<div class="col-lg-4">
@@ -139,7 +137,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" class="form-control" name="fileupload" placeholder="Subject" required>
+																			<input type="file" class="form-control" name="upload_file" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg" placeholder="Subject" required>
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
@@ -285,12 +283,6 @@ color: #000;
 				console.log(error)
 			}
 			});
-
-
-
-
-				
-				
 				}
 				// Add an event listener for the changeDate event
 				$('.bootstrap-datepicker-inline').datepicker().on('changeDate', handleDateChange);
