--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -103,7 +103,7 @@ color: #000;
 												{% endfor %}
 											
 											{% endif %}
-												<form method="post">
+												<form method="post" enctype="multipart/form-data">
 													{% csrf_token %}
 
 													<input type="text" name="fromtime" id="fromtime" class="d-none">
@@ -139,7 +139,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" class="form-control" name="fileupload" placeholder="Subject" required>
+																			<input type="file" class="form-control"  name="upload_file" placeholder="Subject" required>
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
