--- a/templates/ChooseDesigner.html
+++ b/templates/ChooseDesigner.html
@@ -24,7 +24,7 @@
 			
 
                      
-            			<section class="middle">
+            <section class="middle" style="min-height:500px;padding:200px"> 
 				<div class="container">
 					<div class="row align-items-center justify-content-center ">
 						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
