--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
     </head>
 	
-    <body>
+    <body style="height:100%">
 	
 			 <!-- ============================================================== -->
         <!-- Preloader - style you can find in spinners.css -->
