--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -4837,7 +4837,21 @@ footer.skin-dark-footer ul.footer-bottom-social li a:hover, footer.skin-dark-foo
     padding: 0 12px;
 }
 
-
+::-webkit-scrollbar-thumb {
+    height: 16px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: #111;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #7c4f1a;
+}
+::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+    background: #0e0e0e;
+}
 
 .paymentWrap {
     padding: 15px;
@@ -4855,7 +4869,7 @@ footer.skin-dark-footer ul.footer-bottom-social li a:hover, footer.skin-dark-foo
     background-color: #111;
 }
 .paymentWrap::-webkit-scrollbar-thumb {
-    background-color: #000;
+    background-color: #7c4f1a;
 }
 .paymentWrap::-webkit-scrollbar {
     width: 16px;
@@ -5677,9 +5691,12 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
 
 
 .product-taps-active-sub{
-        background: #000;
+    background: #fff;
     padding: 10px;
-    border: 1px solid #eac97a;
+    border: 2px solid #edb003;
+    margin: 0px !important;
+    margin-top: -2px !important;
+    border-top: 2px solid #edb003;
 }
 
 
@@ -5844,15 +5861,19 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
     
 }
 .ChoseDesignerBTN a{
-        display: block;
-    height: 55px;
-    line-height: 55px;
+    display: block;
+    height: 50px;
+    line-height: 50px;
     padding: 0 25px;
-    border: 2px solid #eac97a;
-    font-size: 20px;
+    border: 0px solid #eac97a;
+    background: #eac97a;
+    font-size: 15px;
     text-align: center;
-    color: #eac97a;
+    color: #fff;
     transition: all .4s ease-in-out;
+    width: max-content;
+    margin: auto;   
+     background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
 }
 .ChoseDesignerBTN a:hover{
         color: #000;
@@ -5863,20 +5884,90 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
 }
 
 
+.BannerAndBosterMockup{
+padding: 50px 0;
+}
+.BannerAndBosterMockup .titileDescr{
+margin-bottom: 50px;;
+}
+.BannerAndBosterMockup .titileDescr h2{
+    margin-bottom: 15px;
+    text-align: center;
+}
+.BannerAndBosterMockup .titileDescr .descriptionPara{
+    margin: auto;
+margin-top: 5px;
+width: 80%;
+
+}
+.BannerAndBosterMockup .titileDescr .descriptionPara p{
+color: #aaa;
+text-align: center;
+font-size: 16px;;
+}
+.BannerAndBosterMockup .mockupsImagess{
+    
+}
+.BannerAndBosterMockup .customModal{
+    border: 1px solid #0e0e0e;
+    background: #0e0e0e;
+}
+.BannerAndBosterMockup .customModal .modal-body{
+    padding: 15px 25px;
+}
+.BannerAndBosterMockup .mockupsImagess .mokUpImageItem{
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+.BannerAndBosterMockup .mockupsImagess .mokUpImageItem .imageMock{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.BannerAndBosterMockup .mockupsImagess .mokUpImageItem .imageUploaded{
+    position: absolute;
+    top: 0;
+    width: 162px;
+    height: calc(100% - 150px);
+    top: 70px;
+    left: 151px;
+    border: 1px solid #eee;
+    object-fit: cover;
+    object-position: center;
+}
 
 
+.chosedesinerBox{
 
-
-
-
-
-
-
-
-
-
-
-
+}
+.chosedesinerBox .titile{
+    
+}
+.chosedesinerBox .titile h2{
+    background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
+    color: #fff;
+    font-size: 20px;
+    padding: 7px 15px;
+    text-align: center;
+    margin: 0;
+}
+.chosedesinerBox .titile h2 span{
+    
+}
+.chosedesinerBox .boxoxoBody{
+    border: 1px solid #111;
+    padding: 20px;
+    text-align: center;
+    background: #0e0e0e;
+}
+.chosedesinerBox .boxoxoBody .descriptionPara{
+    margin-bottom: 10px;
+}
+.chosedesinerBox .boxoxoBody .descriptionPara p{
+    font-size: 15px;
+}
 
 
 
@@ -5942,7 +6033,7 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
 		transition: all 0.6s;
 		border-radius: 0;
 		position: relative;
-		height: 600px;
+		height: 100vh;
 	}
 	.miliods {
 		padding-right: 2.5rem;
@@ -5962,7 +6053,7 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
 		padding: 0 2rem;
 	}
 	.home-slider .item {
-		height: 405px;
+		height: 100vh;
 	}
 	.lg-heading {
 		font-size: 65px;
