--- a/templates/products.html
+++ b/templates/products.html
@@ -24,7 +24,7 @@
 			
 			
 			<!-- ======================= Filter Wrap Style 1 ======================== -->
-			<section class="py-3 br-bottom br-top">
+			<section class="py-3 BG_Second_Dark">
 				<div class="container">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
@@ -166,10 +166,10 @@
 							
 							<div class="row">
 								<div class="col-xl-12 col-lg-12 col-md-12">
-									<div class="border mb-3 mfliud">
-										<div class="row align-items-center py-2 m-0">
+									<div class=" mb-3 mfliud">
+										<div class="row align-items-center py-3 m-0 BG_Gold_Gradiant">
 											<div class="col-xl-3 col-lg-4 col-md-5 col-sm-12">
-												<h6 class="mb-0">{{products.count}} Items Found</h6>
+												<h6 class="mb-0 text-white">{{products.count}} Items Found</h6>
 											</div>
 											
 											{% comment %} <div class="col-xl-9 col-lg-8 col-md-7 col-sm-12">
