--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -5871,13 +5871,14 @@ background: radial-gradient(circle, rgba(234,201,122,1) 0%, rgba(115,69,18,1) 10
     text-align: center;
     color: #fff;
     transition: all .4s ease-in-out;
-    width: max-content;
+    width: 200px;
     margin: auto;   
      background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
 }
 .ChoseDesignerBTN a:hover{
         color: #000;
-    background: #eac97a;
+        background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
+
 }
 .ChoseDesignerBTN a span{
     
@@ -5968,6 +5969,81 @@ font-size: 16px;;
 .chosedesinerBox .boxoxoBody .descriptionPara p{
     font-size: 15px;
 }
+
+.BG_Second_Dark{
+    background: #0e0e0e;
+}
+.BG_Gold_Gradiant{
+    background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
