--- a/templates/ChooseDesigner.html
+++ b/templates/ChooseDesigner.html
@@ -24,10 +24,10 @@
 			
 
                      
-            <section class="middle" style="min-height:500px;padding:10px 0"> 
+            <section class="middle" style="padding:50px 0px; padding-bottom: 100px;"> 
 				<div class="container">
 					<div class="row align-items-center justify-content-center ">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
                             <div class="chosedesinerBox">
 								<div class="titile">
 									<h2>For Fast Designe <span>6$</span></h2>
@@ -44,13 +44,24 @@
 								</div>
 							</div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                            <div class="ChoseDesignerBTN">
-                                <a href="{% url 'call_expert:call_senior_designer' %}">
-                                    Call Expert Designer
-                                </a>
-                            </div>
+						<div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
+                            <div class="chosedesinerBox">
+								<div class="titile">
+									<h2>Call Expert Designer</h2>
+								</div>
+								<div class="boxoxoBody">
+									<div class="descriptionPara">
+										<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									</div>
+									<div class="ChoseDesignerBTN">
+										<a href="{% url 'call_expert:call_senior_designer' %}">
+											Call Now
+										</a>
+									</div>
+								</div>
+							</div>
                         </div>
+                       
 						<!-- <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
 							<div class="abt_caption">
 								<h2 class="ft-medium mb-4">Call Senior Designer ss</h2>
