--- a/templates/products.html
+++ b/templates/products.html
@@ -43,11 +43,11 @@
 			
 			<!-- ======================= All Product List ======================== -->
 			<section class="middle">
-				<div class="container-fluid">
+				<div class="container px-3">
 					<div class="row">
 						
 						<div class="col-xl-3 col-lg-4 col-md-12 col-sm-12 p-xl-0">
-							<div class="search-sidebar sm-sidebar border">
+							<div class="search-sidebar sm-sidebar ">
 								<div class="search-sidebar-body">
 								
 								<div class="single_search_boxed">
