--- a/templates/products.html
+++ b/templates/products.html
@@ -208,12 +208,12 @@
                                                 </a>
                                                 <div class="product-hover-overlay btn d-flex align-items-center justify-content-center">
                                                     <div class="group_btn">
-                                                        <a href="{% url 'product:edit_product_design' product.id %}"  class="prd_btn_square">
+                                                        <!-- <a href="{% url 'product:edit_product_design' product.id %}"  class="prd_btn_square">
                                                             <i class="ti-fullscreen"></i>
                                                         </a>
                                                         <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
                                                             <i class="lni lni-heart"></i>
-                                                        </a>
+                                                        </a> -->
                                                         <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
                                                             <i class="lni lni-shopping-basket"></i>
                                                         </a>
@@ -278,12 +278,7 @@
                                                     </a>
                                                     <div class="product-hover-overlay btn d-flex align-items-center justify-content-center">
                                                         <div class="group_btn">
-                                                            <a href="#" data-toggle="modal" data-target="#quickview" class="prd_btn_square">
-                                                                <i class="ti-fullscreen"></i>
-                                                            </a>
-                                                            <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
-                                                                <i class="lni lni-heart"></i>
-                                                            </a>
+                                                            
                                                             <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
                                                                 <i class="lni lni-shopping-basket"></i>
                                                             </a>
@@ -343,12 +338,7 @@
                                                     </a>
                                                     <div class="product-hover-overlay btn d-flex align-items-center justify-content-center">
                                                         <div class="group_btn">
-                                                            <a href="#" data-toggle="modal" data-target="#quickview" class="prd_btn_square">
-                                                                <i class="ti-fullscreen"></i>
-                                                            </a>
-                                                            <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
-                                                                <i class="lni lni-heart"></i>
-                                                            </a>
+                                                           
                                                             <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
                                                                 <i class="lni lni-shopping-basket"></i>
                                                             </a>
@@ -408,12 +398,7 @@
                                                     </a>
                                                     <div class="product-hover-overlay btn d-flex align-items-center justify-content-center">
                                                         <div class="group_btn">
-                                                            <a href="#" data-toggle="modal" data-target="#quickview" class="prd_btn_square">
-                                                                <i class="ti-fullscreen"></i>
-                                                            </a>
-                                                            <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
-                                                                <i class="lni lni-heart"></i>
-                                                            </a>
+                                                            
                                                             <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
                                                                 <i class="lni lni-shopping-basket"></i>
                                                             </a>
@@ -473,12 +458,7 @@
                                                     </a>
                                                     <div class="product-hover-overlay btn d-flex align-items-center justify-content-center">
                                                         <div class="group_btn">
-                                                            <a href="#" data-toggle="modal" data-target="#quickview" class="prd_btn_square">
-                                                                <i class="ti-fullscreen"></i>
-                                                            </a>
-                                                            <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
-                                                                <i class="lni lni-heart"></i>
-                                                            </a>
+                                                            
                                                             <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
                                                                 <i class="lni lni-shopping-basket"></i>
                                                             </a>
