--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -750,6 +750,7 @@ img{
     text-align: center;
     margin-bottom: 5px;
     height: 50px;
+    background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
 }
 .btn-group-vertical .btn i{
     display: block;
