--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -90,6 +90,14 @@ color: #000;
 				<!-- ======================= Dashboard Detail ======================== -->
 				<section class="middle CheckOutPage cllExpertTwo">
 					<div class="container">
+						<div class="BannerAndBosterMockup p-0">
+							<div class="titileDescr">
+								<h2>Call Senior Designer</h2>
+								<div class="descriptionPara">
+									<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								</div>
+							</div>
+						</div>
 						<div class="row align-items-start justify-content-between">
 							<div class="col-lg-12 col-md-12 col-sm-12">
 								<div class="submit-page">
@@ -156,6 +164,13 @@ color: #000;
 																<div data-provide="datepicker-inline"  class="bootstrap-datepicker-inline"></div>
 	
 	<!--                                                            <div id="container" class="calendar-container"></div>-->
+															</div>
+															<div class="notsBoxCallEcpert">
+																<ul>
+																	<li><span></span><p>Note 1</p></li>
+																	<li><span></span><p>Note 1</p></li>
+																	<li><span></span><p>Note 1</p></li>
+																</ul>
 															</div>
 														</div>
 														<div class="col-lg-3">
